--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: write
+
 jobs:
   bump-version:
     runs-on: ubuntu-latest
@@ -13,27 +16,40 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Resolve version string
         id: version
+        shell: bash
         run: |
           TITLE="${{ github.event.pull_request.title || github.event.head_commit.message }}"
-          TITLE=$(echo "$TITLE" | head -n1 | sed -E 's/[^A-Za-z0-9._-]+/_/g')
-
+          TITLE="$(echo "$TITLE" | head -n1 | sed -E 's/[^A-Za-z0-9._-]+/_/g')"
           if [ -z "$TITLE" ]; then
             TITLE="sha-$(git rev-parse --short HEAD)"
           fi
-
           echo "Resolved EZO_VERSION=$TITLE"
-          echo "title=$TITLE" >> $GITHUB_OUTPUT
+          echo "title=$TITLE" >> "$GITHUB_OUTPUT"
 
       - name: Patch EZO_VERSION in source file
+        shell: bash
         run: |
           sed -i "s/^export const EZO_VERSION = .*/export const EZO_VERSION = \"${{ steps.version.outputs.title }}\";/" ezoterikus-client/js/ezo.js
 
-      - name: Commit and push version bump
+      - name: Skip if no changes
+        id: diff
+        shell: bash
         run: |
-          git config user.name "github-actions"
+          if git diff --quiet; then
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Commit and push version bump
+        if: steps.diff.outputs.changed == 'true'
+        shell: bash
+        run: |
+          git config user.name  "github-actions"
           git config user.email "github-actions@github.com"
           git add ezoterikus-client/js/ezo.js
           git commit -m "chore: bump EZO_VERSION to ${{ steps.version.outputs.title }}"
